Fix spacing between exhibitors.

--- a/httpdocs/sites/all/themes/custom/scale12x/css/style.css
+++ b/httpdocs/sites/all/themes/custom/scale12x/css/style.css
@@ -8269,7 +8269,6 @@ div.password-suggestions ul {
   padding: 3px 12px;
   text-align: center;
 }
-.view-exhibitors .view-content .views-row,
 .view-sponsors-12x .view-content .views-row {
   padding-top: 0;
 }
