--- a/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
+++ b/httpdocs/sites/all/themes/custom/scale12x/less/scale12x.less
@@ -70,6 +70,8 @@ body {
     padding: 3px 12px;
     text-align: center;
   }
+}
+.view-sponsors-12x {
   .view-content {
     .views-row {
       padding-top: 0;
